remove border because it was causing issues with clipping

--- a/assets/main.css
+++ b/assets/main.css
@@ -15,7 +15,6 @@ h1#title {
 
 canvas#canvas {
   background-color: black;
-  border: 1px solid white;
 }
 
 canvas#canvas:hover {
